rewrited test resource access to apache commons codec library